--- a/destination.html
+++ b/destination.html
@@ -44,11 +44,14 @@
 <!-- --------------------------- navigation menu  end--------------------------- -->
 
 <section id="container">
-<h1 class="pick">01 Pick YOUR destination</h1>
+    <div>
+        <h1 class="pick">01 Pick YOUR destination</h1>
 
-<figure id="image-placeholder">
+        <figure id="image-placeholder">
+        
+        </figure>
+    </div>
 
-</figure>
  <!-- -------------------------- detail container --------------------------- -->
 <div class="detail-container">
 <nav>
@@ -67,11 +70,11 @@
 </p>
 <div class="destination-geo">
     <div class="destination-geo_distabce">
-        Avg. distance
+        <P>Avg. distance</P>
 <h1>384,400 km</h1>
     </div>
 <div class="destination-geo_time">
-    Est. travel time
+    <P>Est. travel time</P>
  <h1> 3 days</h1>
 </div>
 </div>
